--- a/documentation/source/general/changelog/0.5.rst
+++ b/documentation/source/general/changelog/0.5.rst
@@ -8,13 +8,14 @@ In this update many things revolve around one of the most original purposes of q
 The Operators module
 --------------------
 
-This module allows you to describe operators that are not necessarily unitary or even hermitian. With these tools at hand you can effectively set up two of quantum's most important algorithms: :meth:`Hamiltonian simulation <qrisp.operators.QubitOperator.trotterization>` and :ref:`VQE`.
+This module allows you to describe operators that are not necessarily unitary or even hermitian. With these tools at hand you can effectively set up two of quantum's most important algorithms: Hamiltonian simulation and :ref:`VQE`.
 
 For this we provide the following classes:
 
 * :ref:`QubitOperator` is a class that enables the representation and processing of arbitrary operators. Operators can be constructed based on a variety of tensor factors including the Pauli-matrices but also projector, creators and annihilators. For the latter Qrisp features a highly performant algorithm for Hamiltonian simulation proposed by `Kornell and Selinger <https://arxiv.org/abs/2310.12256>`_.
 * :ref:`FermionicOperator` provides you with the tools to describe and manipulate fermionic systems. This type of system is of particular importance for applications in chemistry because the many computations for molecular dynamics involve the simulation of electrons, which are fermions. FermionicOperators can be constructed effortlessly from `PySCF <https://pyscf.org/>`_ data. PySCF is one of the most popular quantum chemistry Python packages.
 * :ref:`VQEProblem` which allows you to quickly formulate and run the VQE algorithm using Hamiltonians expressed through the two operator classes.
+
 
 QIRO
 ----
@@ -23,13 +24,14 @@ QIRO
 Compiler upgrades
 -----------------
 
-* A significantly fast algorithm for memory management has been implemented. With this feature, managing circuits with thousands of qubits is no more a problem.
-* The compiler can now also leverage X-Permeability type commutativity relations. More info _`here <https://quantum-compilers.github.io/iwqc2024/papers/IWQC2024_paper_16.pdf>`_.
+* A significantly fast algorithm for memory management has been implemented. With this feature, managing circuits with thousands of qubits is no problem.
+* The compiler can now also leverage X-Permeability type commutativity relations. More info `here <https://quantum-compilers.github.io/iwqc2024/papers/IWQC2024_paper_16.pdf>`__.
 
 Algorithmic primitives
 ----------------------
 
 * :ref:`A module <phase_polynomials>` for the efficient treatment of Phase polynomials has been implemented.
+* :ref:`Quantum switch-case <qswitch>` can be used to execute a `switch statement <https://en.wikipedia.org/wiki/Switch_statement>`_ in superposition
 
 Minor features
 --------------
@@ -39,16 +41,3 @@ Minor features
 * :ref:`Operations <Operation>` can now receive complex numbers as parameters.
 * :ref:`QuantumModulus` will now use the user-specified adder for all arithmetic evaluations (previously only in-place multiplication).
 * A :ref:`tutorial <sudoku>` for utilizing the Quantum-Backtracking algorithm for solving Sudokus is now available.
-
-
-
-Bug-fixes
----------
-
-* Fixed a bug that caused false results in some simulations containing a Y-gate.
-* Fixed a bug that prevented proper QFT cancellation within the :meth:`compile <qrisp.QuantumSession.compile>` method in some cases.
-* Fixed a bug that prevented proper verification of correct automatic uncomputation in some cases.
-* Fixed a bug that caused false determination of the unitary of controlled gates with a non-trivial control state.
-* Fixed a bug that caused problems during circuit visualisation on some platforms.
-* Fixed a bug that caused the simulation progress bar to not vanish after the simulation concluded.
-* Fixed a bug that introduced an extra phase in the compilation of dirty-ancillae supported ``balauca`` MCX gates.
